# ios-mediasoup

./: .gitignore  Mediasoup-Client-Swift-Device.podspec  Package.swift  README.md  build.sh  build84.sh  build_all.sh  build_bindings.sh  build_deps.sh  build_ios.sh  build_macos.sh  build_macos_arm64.sh  build_macos_dev.sh  build_macos_x64_86.sh
.github/workflows/: autotag.yml  build-binaries.yml
Empty/: Empty.swift
Example/MediasoupExample/: ViewController.swift
Mediasoup/: Consumer.swift  Device.swift  MediaKind.swift  Producer.swift  ReceiveTransport.swift  SendTransport.swift  SendTransportDelegate.swift  Transport.swift
Mediasoup.xcodeproj/: project.pbxproj
Mediasoup/dependencies/: CMakeLists.txt
Mediasoup_Private/Consumer/: ConsumerWrapper.mm
Mediasoup_Private/DataConsumer/: DataConsumerWrapper.mm
Mediasoup_Private/Device/: DeviceWrapper.h  DeviceWrapper.mm
Mediasoup_Private/MediasoupClientError/: MediasoupClientErrorHandler.h  MediasoupClientErrorHandler.mm
Mediasoup_Private/Producer/: ProducerWrapper.mm
Mediasoup_Private/Transport/: ReceiveTransportWrapper.hpp  ReceiveTransportWrapper.mm  SendTransportWrapper.hpp  SendTransportWrapper.mm
patches/: abseil_variant.patch  absl_threadlocal.patch  datachannel_open.patch  echo_cancellation.patch  hybrid_callback.patch  ios_subframeworks.patch  metal_header.patch  nsgl_deprecation.patch  objc_audio_device_module_h.patch  objc_audio_device_module_mm.patch  sdk_BUILD.patch  task_factory.patch
webrtcdev.xcworkspace/: contents.xcworkspacedata
